# F550_Project_Exercise2

./: .env.example  .gitignore  README.md  environment.yml  main.py  pyproject.toml  requirements.txt
data/: NVDA_2024.csv  README.txt  data.csv
src/: __init__.py  backtester.py  env_utils.py  filing_rag.py  llm_backend.py  market_data.py  sec_fundamentals.py  valuation_agent.py
