[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "f550-project-exercise-2"
version = "0.1.0"
description = "F550 Project Exercise 2 valuation agent and event-based backtest"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openai",
    "numpy",
    "pandas",
    "pypdf",
    "requests",
]
